--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -82,10 +82,10 @@ steps:
   commands:
   - echo "+++ BDI PIPELINE.XML COMMANDS BEGIN"
 
-#   # Remove docker images older than one day
-#   - echo "--- Cleanup old docker images"
-#   - docker image ls | awk '/(days|weeks|months) ago/ {print $3}' || echo okay
-#   - docker image ls | awk '/(days|weeks|months) ago/ {print $3}' | xargs docker image rm || echo okay
+  # Remove docker images older than one day
+  - echo "--- Cleanup old docker images"
+  - docker image ls | awk '/(days|weeks|months) ago/ {print $3}' || echo okay
+  - docker image ls | awk '/(days|weeks|months) ago/ {print $3}' | xargs docker image rm || echo okay
 
   # Remove DELETEME* dirs older than one week
   - echo "--- Cleanup old common areas"
@@ -121,7 +121,6 @@ steps:
         shell:   ["/bin/bash", "-e", "-c"]
         mount-checkout: false
   commands: |
-    exit 13
     echo "/aha/.buildkite/bin/rtl-goldcheck.sh amber"
     if ! /aha/.buildkite/bin/rtl-goldcheck.sh amber; then
         msg="Amber gold check FAILED. This is not fatal. But it really should be fixed."
@@ -143,7 +142,6 @@ steps:
         shell:   ["/bin/bash", "-e", "-c"]
         mount-checkout: false
   commands: |
-    exit 13
     echo "/aha/.buildkite/bin/rtl-goldcheck.sh onyx"
     if ! /aha/.buildkite/bin/rtl-goldcheck.sh onyx; then
         msg="Onyx gold check FAILED. This is not fatal. But it really should be fixed."
