--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -84,8 +84,8 @@ steps:
 
   # Remove docker images older than one day
   - echo "--- Cleanup old docker images"
-  - docker image ls | awk '/(days|weeks|months) ago/ {print $3}' || echo okay
-  - docker image ls | awk '/(days|weeks|months) ago/ {print $3}' | xargs docker image rm || echo okay
+  - docker image ls | awk '/(days|weeks|months) ago/ {print $$3}' || echo okay
+  - docker image ls | awk '/(days|weeks|months) ago/ {print $$3}' | xargs docker image rm || echo okay
 
   # Remove DELETEME* dirs older than one week
   - echo "--- Cleanup old common areas"
