--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -84,7 +84,7 @@ steps:
 
   # Remove docker images older than one day
   - echo "--- Cleanup old docker images"
-  - docker image ls | awk '/(days|weeks|months) ago/ {print $$3}' || echo okay
+  - docker image ls | awk '/(days|weeks|months) ago/ {print}' || echo okay
   - docker image ls | awk '/(days|weeks|months) ago/ {print $$3}' | xargs docker image rm || echo okay
 
   # Remove DELETEME* dirs older than one week
@@ -174,15 +174,6 @@ steps:
 
   command: REGRESSION_STEP=1 $REGRESS_METAHOOKS --commands
 
-#   commands: |
-#     set -x
-#     docker kill $$CONTAINER || echo okay
-#     docker images; echo IMAGE=$$IMAGE; echo TAG=$$TAG
-#     docker run -id --name $$CONTAINER --rm -v /cad:/cad -v ./temp:/buildkite:rw $$IMAGE bash
-#     script="$($REGRESS_METAHOOKS --commands)"
-#     docker exec -e CONFIG=$$CONFIG -e REGSTEP=1 $$CONTAINER /bin/bash -c "$$script"
-#     docker kill $$CONTAINER
-
 ########################################################################
 # STEP: onyx regression 2
 
@@ -195,13 +186,7 @@ steps:
         pre-command: $REGRESS_METAHOOKS --pre-command
         pre-exit:    $REGRESS_METAHOOKS --pre-exit
 
-  commands:
-    - docker kill $$CONTAINER || echo okay
-    - docker run -id --name $$CONTAINER --rm -v /cad:/cad -v ./temp:/buildkite:rw $$IMAGE bash
-    - exit 13
-    - script="$($REGRESS_METAHOOKS --commands)"
-    - docker exec -e CONFIG=$$CONFIG -e REGSTEP=2 $$CONTAINER /bin/bash -c "$$script"
-    - docker kill $$CONTAINER
+  command: REGRESSION_STEP=2 $REGRESS_METAHOOKS --commands
 
 ########################################################################
 # STEP: onyx regression 3
@@ -215,28 +200,4 @@ steps:
         pre-command: $REGRESS_METAHOOKS --pre-command
         pre-exit:    $REGRESS_METAHOOKS --pre-exit
 
-  commands:
-    - docker kill $$CONTAINER || echo okay
-    - docker run -id --name $$CONTAINER --rm -v /cad:/cad -v ./temp:/buildkite:rw $$IMAGE bash
-    - exit 13
-    - script="$($REGRESS_METAHOOKS --commands)"
-    - docker exec -e CONFIG=$$CONFIG -e REGSTEP=3 $$CONTAINER /bin/bash -c "$$script"
-    - docker kill $$CONTAINER
-
-########################################################################
-# STEP: final cleanup
-
-# Wait for all steps to complete before deleting image
-- wait: { continue_on_failure: true }
-
-- label: ":skull_and_crossbones: Delete Docker Image"
-
-  # "run-without-clone" b/c don't need repo just to delete the docker image
-  plugins:   [ uber-workflow/run-without-clone: ]
-
-  # Set "soft-fail" -- failing cleanup should not fail the larger pipeline.
-  soft_fail: true
-
-  # Not exactly sure why '--no-prune' is included...?
-  commands:
-    - docker image rm "garnet:aha-flow-build-${BUILDKITE_BUILD_NUMBER}" --no-prune
+  command: REGRESSION_STEP=3 $REGRESS_METAHOOKS --commands
