--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -11,6 +11,7 @@ env:
 
   REGRESS_METAHOOKS: $$COMMON/regress-metahooks.sh
   IMAGE: garnet:aha-flow-build-$BUILDKITE_BUILD_NUMBER
+  TAG: aha-flow-build-$BUILDKITE_BUILD_NUMBER
 
 steps:
 
@@ -81,6 +82,15 @@ steps:
   commands:
   - echo "+++ BDI PIPELINE.XML COMMANDS BEGIN"
 
+  # Remove docker images older than one day
+  - echo "--- Cleanup old docker images"
+  - docker image ls | awk '/(days|weeks|months) ago/ {print}' || echo okay
+  - docker image ls | awk '/(days|weeks|months) ago/ {print $$3}' | xargs docker image rm || echo okay
+
+  # Remove DELETEME* dirs older than one week
+  - echo "--- Cleanup old common areas"
+  - find /var/lib/buildkite-agent/builds/DELETEME* -type d -mtime +7 -exec /bin/rm -rf {} \; || echo okay
+
   - echo "--- Save repo things in common area"
   - mkdir -p $$COMMON
   - cp $$BUILDKITE_BUILD_CHECKOUT_PATH/.buildkite/bin/regress-metahooks.sh $$COMMON
@@ -89,7 +99,7 @@ steps:
   - set -x; docker images; docker ps;
 
   - echo "--- Creating garnet Image"
-  - docker build . -t "$$IMAGE"
+  - docker build --progress plain . -t "$$IMAGE"
 
   - echo "--- Pruning Docker Images"
   - yes | docker image prune -a --filter "until=6h" --filter=label='description=garnet' || true
@@ -162,13 +172,7 @@ steps:
         pre-command: $REGRESS_METAHOOKS --pre-command
         pre-exit:    $REGRESS_METAHOOKS --pre-exit
 
-  commands:
-    - docker kill $$CONTAINER || echo okay
-    - docker run -id --name $$CONTAINER --rm -v /cad:/cad -v ./temp:/buildkite:rw $$IMAGE bash
-    - script="$($REGRESS_METAHOOKS --commands)"
-    # - docker exec -e CONFIG=fast -e REGSTEP=1 $$CONTAINER /bin/bash -c "$$script"
-    - docker exec -e CONFIG=$$CONFIG -e REGSTEP=1 $$CONTAINER /bin/bash -c "$$script"
-    - docker kill $$CONTAINER
+  command: REGRESSION_STEP=1 $REGRESS_METAHOOKS --commands
 
 ########################################################################
 # STEP: onyx regression 2
@@ -182,12 +186,7 @@ steps:
         pre-command: $REGRESS_METAHOOKS --pre-command
         pre-exit:    $REGRESS_METAHOOKS --pre-exit
 
-  commands:
-    - docker kill $$CONTAINER || echo okay
-    - docker run -id --name $$CONTAINER --rm -v /cad:/cad -v ./temp:/buildkite:rw $$IMAGE bash
-    - script="$($REGRESS_METAHOOKS --commands)"
-    - docker exec -e CONFIG=$$CONFIG -e REGSTEP=2 $$CONTAINER /bin/bash -c "$$script"
-    - docker kill $$CONTAINER
+  command: REGRESSION_STEP=2 $REGRESS_METAHOOKS --commands
 
 ########################################################################
 # STEP: onyx regression 3
@@ -201,28 +200,4 @@ steps:
         pre-command: $REGRESS_METAHOOKS --pre-command
         pre-exit:    $REGRESS_METAHOOKS --pre-exit
 
-  commands:
-    - docker kill $$CONTAINER || echo okay
-    - docker run -id --name $$CONTAINER --rm -v /cad:/cad -v ./temp:/buildkite:rw $$IMAGE bash
-    - script="$($REGRESS_METAHOOKS --commands)"
-    - docker exec -e CONFIG=$$CONFIG -e REGSTEP=3 $$CONTAINER /bin/bash -c "$$script"
-    - docker kill $$CONTAINER
-
-########################################################################
-# STEP: final cleanup
-
-# Wait for all steps to complete before deleting image
-- wait: { continue_on_failure: true }
-
-- label: ":skull_and_crossbones: Delete Docker Image"
-
-  # "run-without-clone" b/c don't need repo just to delete the docker image
-  plugins:   [ uber-workflow/run-without-clone: ]
-
-  # Set "soft-fail" -- failing cleanup should not fail the larger pipeline.
-  soft_fail: true
-
-  # Not exactly sure why '--no-prune' is included...?
-  commands:
-    - docker image rm "garnet:aha-flow-build-${BUILDKITE_BUILD_NUMBER}" --no-prune
-    - /bin/rm -rf $$COMMON
+  command: REGRESSION_STEP=3 $REGRESS_METAHOOKS --commands
